Fix issue that when the game ends, the controls are still visible.

--- a/style/style.scss
+++ b/style/style.scss
@@ -2,6 +2,9 @@
 @import 'mixins';
 @import 'general';
 
+.player-select {
+	margin-bottom: 1.5rem;
+}
 
 .name-input-wrapper {
 	
@@ -139,7 +142,6 @@
 	z-index: 2;
 	position: relative;
 
-
 	.healthbar__value {
 		background-color: #00a876;
 		width: 100%;
@@ -154,11 +156,14 @@
 	gap: 1.5rem;
 	max-width: 60rem;
 	padding: 1.5rem;
+	margin-bottom: 1.5rem;
+
 	.battle-stage-wrapper {
 		flex: 1;
 		padding: 1.5rem;
 		border-radius: $border-radius-m;
 	}
+
 }
 
 .battle-stage-wrapper {
@@ -218,6 +223,10 @@
 
 // Log list
 #log {
+	h2 {
+		margin-top: 1rem;
+		margin-bottom: 0.5rem;
+	}
 	ul {
 		list-style: none;
 		margin: 0;
